# StowMind

./: .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  setup.sh  start.sh  vite.config.ts
.github/workflows/: publish.yml
.kiro/specs/embedded-terminal/: .config.kiro  design.md  requirements.md  tasks.md
docs/: ROADMAP.md
scripts/: gen_icons.py  generate-icons.js  generate-icons.sh  test-ai.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: ai.rs  deepclean.rs  duplicates.rs  main.rs  organizer.rs  pty.rs  watch.rs
src/components/: Sidebar.tsx  TerminalPanel.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx  select.tsx
src/hooks/: useTheme.tsx
src/i18n/: en.ts  index.tsx  zh.ts
src/lib/: categoryRules.ts  utils.ts
src/pages/: DeepCleanPage.tsx  DuplicatesPage.tsx  HistoryPage.tsx  HomePage.tsx  OrganizePage.tsx  SettingsPage.tsx  StatisticsPage.tsx
src/stores/: app.ts  deepclean.ts
